fixed scrolling bug and menu bar gap

--- a/react-app/src/components/MenuBar/menu.css
+++ b/react-app/src/components/MenuBar/menu.css
@@ -1,3 +1,26 @@
+
+#menu-container{
+    top:0px;
+    height: 50px;
+    display: grid;
+    grid-template-columns: 50px 1fr 1fr;
+    padding: 10px 50px 0 50px;
+    position: fixed;
+    background-color: white;
+    width: 100%;
+    z-index: 999;
+}
+
+#menu-items-container{
+    display: flex;
+    flex-direction: row;
+    column-gap: 25px;
+    align-items: center;
+    justify-content: end;
+    padding-right: 50px;
+}
+
+
 #notification-modal{
     position: fixed;
     width: 330px;
